samples/_failures_safe/1761695325_ebc17a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3ae4a32.c: In function ‘main’:
./samples/SAFE/__tmp_a3ae4a32.c:157:5: error: expected expression at end of input
  157 |     if (fgets(processor.input_buffer, sizeof(
      |     ^~
./samples/SAFE/__tmp_a3ae4a32.c:157:9: error: too few arguments to function ‘fgets’
  157 |     if (fgets(processor.input_buffer, sizeof(
      |         ^~~~~
In file included from /usr/include/stdio.h:980,
                 from ./samples/SAFE/__tmp_a3ae4a32.c:2:
/usr/include/x86_64-linux-gnu/bits/stdio2.h:196:1: note: declared here
  196 | fgets (char *__restrict __s, int __n, FILE *__restrict __stream)
      | ^~~~~
./samples/SAFE/__tmp_a3ae4a32.c:157:5: error: expected declaration or statement at end of input
  157 |     if (fgets(processor.input_buffer, sizeof(
      |     ^~
